--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
 <nav>
     <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>Home</a>
-    <a href="/about" {% if page.url == "/" %}style="color: red;"{% endif %}>Über mich</a>
+    <a href="/about" {% if page.url == "/about" %}style="color: red;"{% endif %}>Über mich</a>
 </nav>
