--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,7 @@
-<nav>
+<!-- <nav>
     {% for item in site.data.navigation %}
         <a href="{{ item.link }}" {% if page.url == item.link %}class="current"{% endif %}>
             {{ item.name }}
         </a>
     {% endfor %}
-    <!-- <a href="/" {% if page.url == "/" %}style="color: red;"{% endif %}>Home</a>
-    <a href="/about" {% if page.url == "/about.html" %}style="color: red;"{% endif %}>Über mich</a> -->
-</nav>
+</nav> -->
