--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,11 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <title>{{ page.title }}</title>
 </head>
 <body>
+    {% include navigation.html %}
     {{ content }}
 </body>
 </html>
